Refactor GeneralizedSem code and fix typos
This commit introduces numerous updates in 'GeneralizedSemIm.java', 'GeneralizedSemPm.java', and 'GeneralizedTemplateEditor.java'. This includes correcting typos, simplifying code logic, revising comments for clarity and improving variable naming conventions. The changes aim to enhance the readability, maintainability, and performance of the code.